Fix notes spacing

--- a/src/components/shiny-card/styles.css
+++ b/src/components/shiny-card/styles.css
@@ -176,8 +176,7 @@ button.icon-button.menu-hint::before {
   display: flex;
   width: 100%;
   height: 100%;
-  margin: 4px;
-  max-height: 112px;
+  max-height: 100%;
   font-size: 1em;
   text-align: justify;
   line-height: 20px;
@@ -235,6 +234,7 @@ button.icon-button.menu-hint::before {
   margin: auto;
   max-height: 100%;
   overflow: auto;
+  padding-right: .5ch;
 }
 
 .empty {
@@ -357,6 +357,9 @@ button.icon-button.menu-hint::before {
     opacity: 1;
     transform: none;
     width: calc(100cqi - 500px);
+    max-height: 112px;
+    margin: 4px;
+    margin-left: 0;
     --elevation-opacity: var(--elevation-2-opacity);
     --surface-color: var(--surface);
     border-radius: calc(1.12 * (var(--border-radius) - 4px)); /* 12% optical adjustment */
